<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Axis &amp; Allies® Calculator</string>
    <string name="purchase_activity_name">Purchase</string>
    <string name="turnOver_buttonText">End Turn</string>
    <string name="seizeTerritories_buttonText">Seize</string>
    <string name="purchase_buttonText">Purchase</string>
    <string name="undo_buttonText">Undo</string>
    <string name="new_game">New</string>
    <string name="save_game">Save</string>
    <string name="load_game">Load</string>
    <string name="delete_game">Delete</string>
    <string name="save_game_label">Name:</string>
    <string name="make_purchase_buttonText">OK</string>
    <string name="cancel_purchase_buttonText">Cancel</string>
    <string name="settings">Settings</string>
    <string name="settings_activity_name">Settings</string>
    <string name="settings_ok_buttonText">OK</string>
    <string name="more">More from Just Do One More</string>
    <string name="details">Details</string>

</resources>